--- a/trabalho2.Rmd
+++ b/trabalho2.Rmd
@@ -151,8 +151,8 @@ for (P in 0:1) {
 Para a série transformada, temos que o menor nível de AICc foi encontrado com os parâmetros $p = 3$, $q = 3$, $P = 1$ e $Q = 1$, cujo modelo pode ser descrito por $SARIMA(3,1,3) \times (1,0,1)_{12}$, com coeficientes iguais a: 
 
 ```{r, include = FALSE}
-
-fit_arima_boxcox = Arima(serie,order=c(3,1,3),seasonal=c(1,0,1), lambda = 'auto')
+lambda_boxcox = BoxCox.lambda(serie)
+fit_arima_boxcox = Arima(serie,order=c(3,1,3),seasonal=c(1,0,1), lambda = "auto")
 fit_arima_boxcox
 ```
 
@@ -238,7 +238,7 @@ Os modelos que apresentam as características observadas na decomposição e seu
 O modelo com menor AICc e, portanto, o modelo com melhor desempenho comparativo, para o modelo não transformado é o "*MMM*", em que apresenta componentes multiplicativos para previsões de erros, tendência e sazonalidade. Já para o modelo com transformação de Box-Cox, o modelo com menor AICc é o "*MAM*" *com dumped*. 
 ```{r, include = FALSE}
 fit_ets <- ets(serie, model = "MMM", damped = FALSE)
-fit_ets_boxcox <- ets(BoxCox(serie,lambda = "auto"), model = "MAM", damped = TRUE)
+fit_ets_boxcox <- ets(BoxCox(serie,lambda=lambda_boxcox), model = "MAM", damped = T)
 ```
 
 O modelo selecionado sem transformação apresenta a seguinte estrutura:
@@ -334,13 +334,13 @@ f_arima <- function(y, h){
   forecast(fit_arima, h)
 }
 f_arima_boxcox <- function(y, h){
-  forecast(fit_arima_boxcox, h)
+  forecast(fit_arima_boxcox, h,lambda = lambda_boxcox)
 }
 f_ets <- function(y, h){
   forecast(fit_ets, h)
 }
 f_ets_boxcox <- function(y, h){
-  forecast(fit_ets_boxcox, h)
+  forecast(fit_ets_boxcox, h, lambda = lambda_boxcox)
 }
 
 # Calculo dos erros de previsão com a janela flutuante
@@ -368,8 +368,6 @@ MAE_arima_boxcox = CV_arima_boxcox %>% abs() %>% colMeans(na.rm=T)
 MAE_ets = CV_ets %>% abs() %>% colMeans(na.rm=T)
 MAE_ets_boxcox = CV_ets_boxcox %>% abs() %>% colMeans(na.rm=T)
 tab = cbind(MAE_arima, MAE_arima_boxcox, MAE_ets, MAE_ets_boxcox); 
-
-
 ```
 Para comparação dos resultados, foi calculado o erro absoluto médio (MAE) para horizonte de previsão.
 
@@ -383,12 +381,12 @@ kableExtra::kable(tab2,
   kableExtra::kable_styling(position = "center", 
                             latex_options = "HOLD_position")
 ```
-Percebe-se que o Erro Absoluto Médio apresentado pelo modelo ETS com transformação Box-Cox é muito superior aos demais. Para melhor compreensão do comportamento dos erros dos demais modelos, o gráfico abaixo ilustra os erros de cada modelo para os cinco horizonte de previsão:
+Percebe-se que o Erro Absoluto Médio apresentado pelo modelo ETS com transformação Box-Cox é muito superior aos demais. Para melhor compreensão do comportamento dos erros dos demais modelos, o gráfico abaixo ilustra compara os erros de cada modelo para os cinco horizonte de previsão com os erros de cada modelo, excluindo o modelo ETS com BoxCox:
 
 ```{r, fig.align="center", fig.cap="Erros absolutos médios a cada horizonte de previsão", echo = FALSE}
 # Construir um gráfico com os horizontes no eixo x e a métrica no eixo y
-plot.ts(tab[,1:3], plot.type='s', col=1:5, lwd=c(2,2), xlab="h",ylab="MAE")
-legend(x=1,y=1200, legend=c("ARIMA", "ARIMA COM BOXCOX", "ETS"), col=1:5, lwd=c(2,2))
+plot.ts(tab, plot.type='s', col=1:5, lwd=c(2,2), xlab="h",ylab="MAE")
+legend(x=1,y=1200, legend=c("ARIMA", "ARIMA COM BOXCOX", "ETS", "ETS com BOXCOX"), col=1:4, lwd=c(2,2), cex=1)
 ```
 
 
@@ -399,27 +397,42 @@ legend(x=1,y=1200, legend=c("ARIMA", "ARIMA COM BOXCOX", "ETS"), col=1:5, lwd=c(
 h = 5
 #comparar os 4 modelos com os modelos abaixo
 
-fit_auto_arima = auto.arima(serie) %>% forecast() %>% accuracy()
-fit_ses = ses(serie, h=h)  %>% forecast() %>% accuracy()
-fit_holt = holt(serie, h=h) %>% forecast() %>% accuracy()
-fit_ets = ets(serie) %>% forecast() %>% accuracy()
-fit_stlf = stlf(serie, h=h) %>% forecast() %>% accuracy()
-fit_bats = bats(serie) %>% forecast() %>% accuracy()
-fit_tbats = tbats(serie) %>% forecast() %>% accuracy()
+dados_teste =  M3[[id]]$xx
 
-acuracia <- rbind(fit_auto_arima[3],
-                  fit_ses[3],
-                  fit_holt[3],
-                  fit_ets[3],
-                  fit_stlf[3],
-                  fit_bats[3],
-                  fit_tbats[3])
+f_arima = fit_arima %>% forecast(h=h) %>% accuracy(dados_teste)
+f_arima_boxcox = fit_arima_boxcox %>% forecast(h=h) %>% accuracy(dados_teste)
+f_ets = fit_ets %>% forecast(h=h) %>% accuracy(dados_teste)
+f_ets_boxcox = fit_ets_boxcox %>% forecast(h=h) %>% accuracy(dados_teste)
+f_auto_arima = auto.arima(serie) %>% forecast(h=h) %>% accuracy(dados_teste)
+f_ses = ses(serie, h=h)  %>% forecast(h=h) %>% accuracy(dados_teste)
+f_holt = holt(serie, h=h) %>% forecast(h=h) %>% accuracy(dados_teste)
+f_auto_ets = ets(serie) %>% forecast(h=h) %>% accuracy(dados_teste)
+f_stlf = stlf(serie, h=h) %>% forecast(h=h) %>% accuracy(dados_teste)
+f_bats = bats(serie) %>% forecast() %>% accuracy(dados_teste)
+f_tbats = tbats(serie) %>% forecast() %>% accuracy(dados_teste)
 
-modelos = c("auto arima","ses","holt","ets","stlf","bats","tbats")
+acuracia <- rbind(f_arima[3],
+                  f_arima_boxcox[3],
+                  f_ets[3],
+                  f_ets_boxcox[3],
+                  f_auto_arima[3],
+                  f_ses[3],
+                  f_holt[3],
+                  f_auto_ets[3],
+                  f_stlf[3],
+                  f_bats[3],
+                  f_tbats[3])
+
+modelos = c("arima","arima com boxcox","ets","ets com boxcox","auto arima","ses","holt","auto ets","stlf","bats","tbats")
 
 resultados = cbind(modelos, round(acuracia,3))
 
-kable(resultados,col.names = c("Modelo", "Acuracia"),align = "c")
+kableExtra::kable(resultados,
+                  col.names = c("Modelos", "MAE"),
+                  escape = F,align = "c",
+                  caption = "Comparação do Erro absoluto médio com todos os modelos") %>%
+  kableExtra::kable_styling(position = "center",
+                            latex_options = "HOLD_position")
 ```
 
 
